fix: missing bootstrap dependency

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h2>Example Custom Covalent Editor</h2>
-<div style="height: 100%">
-  <td-text-editor [value]="sampleText" [options]="covalentEditorOpts"></td-text-editor>
+<div class="container">
+  <div class="row">
+    <div style="height: 100%">
+      <td-text-editor [value]="sampleText" [options]="covalentEditorOpts"></td-text-editor>
+    </div>
+  </div>
 </div>
